Started work on layout page

--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -3,5 +3,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+@section imageContent
+{
+    Hello World
+}
+@section pageContent
+{
+Wazzup
+}
