added to layout

--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -51,8 +51,8 @@
     </nav>
     <!-- Full Page Image Header with Vertically Centered Content -->
     <header class="masthead">
-        <div class="container bg-transparent">
-            <div class="card">
+        <div class="container-fluid">
+            <div class="card m-md-5 background-card">
                 <div class="card-body">
                     @RenderSection("imageContent")
                 </div>
