--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -5,7 +5,21 @@
 
 @section imageContent
 {
-    Hello World
+   <div class="row">
+        <div class="col-md-9">
+            <div class="card background-card">
+                <div class="card-header">
+                    <h3>Book your flight today!</h3>
+                </div>
+                <div class="card-body">
+
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 d-none d-lg-block">
+            <img class="img-fluid w-100" src="~/static/ad_beta.jpg" style="height:80vh;">
+        </div>
+    </div>
 }
 @section pageContent
 {
