Quick update to buttons to Seed controller

--- a/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
@@ -5,5 +5,8 @@
 @section imageContent
 {
     <a asp-controller="Seed" asp-action="SeedCities" class="btn btn-info">Seed Cities</a>
+    <a asp-controller="Seed" asp-action="SeedRoles" class="btn btn-info">Seed Roles</a>
+    <a asp-controller="Seed" asp-action="SeedCustomers" class="btn btn-info">Seed Customers</a>
+    <a asp-controller="Seed" asp-action="SeedEmployees" class="btn btn-info">Seed Employees</a>
 }
 @section pageContent{ }
