seed flights, routes, flight info

--- a/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
@@ -5,6 +5,9 @@
 @section imageContent
 {
     <a asp-controller="Seed" asp-action="SeedCities" class="btn btn-info">Seed Cities</a>
+    <a asp-controller="Seed" asp-action="SeedRoutes" class="btn btn-info">Seed Routes</a>
+    <a asp-controller="Seed" asp-action="SeedFlightInfos" class="btn btn-info">Seed Flight Information</a>
+    <a asp-controller="Seed" asp-action="SeedFlights" class="btn btn-info">Seed Flights</a>
     <a asp-controller="Seed" asp-action="SeedRoles" class="btn btn-info">Seed Roles</a>
     <a asp-controller="Seed" asp-action="SeedCustomers" class="btn btn-info">Seed Customers</a>
     <a asp-controller="Seed" asp-action="SeedEmployees" class="btn btn-info">Seed Employees</a>
