--- a/Visual Studio Project/LonghornAirlines/Views/Shared/Error.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/Error.cshtml
@@ -1,16 +1,17 @@
 ﻿@model IEnumerable<String>
-@section imageContent{ }
+@section imageContent{
 <h1>Error</h1>
 
-<p>Oops - something went wrong.</p>
+    <p>Oops - something went wrong.</p>
 
-@if (Model != null)
-{
-    foreach (String message in Model)
+    @if (Model != null)
     {
-        <p><span class="text-danger">@message</span></p>
+        foreach (String message in Model)
+        {
+            <p><span class="text-danger">@message</span></p>
+        }
     }
-}
 
-<a asp-action="Index" asp-controller="Home" class="btn btn-danger">Take me home!</a>
+    <a asp-action="Index" asp-controller="Home" class="btn btn-danger">Take me home!</a>
+} 
 }
