one way flight lookup functional

--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     @ViewBag.Today
                 </div>
                 <div class="card-body">
-                    <form asp-action="BookingSearchResults" asp-controller="Home" method="get">
+                    <form asp-action="FlightResults" asp-controller="Search" method="get">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="row">
                             <div class="col-6">
