Implement Account Login

--- a/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Seed/Index.cshtml
@@ -11,5 +11,6 @@
     <a asp-controller="Seed" asp-action="SeedRoles" class="btn btn-info">Seed Roles</a>
     <a asp-controller="Seed" asp-action="SeedCustomers" class="btn btn-info">Seed Customers</a>
     <a asp-controller="Seed" asp-action="SeedEmployees" class="btn btn-info">Seed Employees</a>
+    <a asp-controller="Seed" asp-action="SeedAdmin" class="btn btn-info">Seed Admin</a>
 }
 @section pageContent{ }
