--- a/Visual Studio Project/LonghornAirlines/Views/_ViewImports.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@namespace LonghornAirlines.Views
 @using LonghornAirlines.Models
+@using LonghornAirlines.Models.Users
+@using LonghornAirlines.Models.Business
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
