--- a/Visual Studio Project/LonghornAirlines/Views/Account/RegisterEmployee.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/RegisterEmployee.cshtml
@@ -85,6 +85,18 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.SSN, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.SSN, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Role, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Role, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-primary" value="Register" />
         </div>
