--- a/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
@@ -14,10 +14,13 @@
         <thead>
             <tr>
                 <th>
+                    Flight Number
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Date)
                 </th>
                 <th>
-                    Flight Time
+                    Departure
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.hasDeparted)
@@ -28,22 +31,28 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Date)
-                    </td>
-                    <td>
-                        @item.FlightInfo.FlightTime
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.hasDeparted)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.FlightID">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.FlightID">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.FlightID">Delete</a>
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @item.FlightInfo.FlightInfoID
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @item.FlightInfo.FlightTime
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.hasDeparted)
+                </td>
+                <td>
+                    @item.FlightInfo.BaseFare
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.FlightID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.FlightID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.FlightID">Delete</a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
