--- a/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
@@ -20,10 +20,10 @@
                     @Html.DisplayNameFor(model => model.Date)
                 </th>
                 <th>
-                    Departure
+                    From
                 </th>
                 <th>
-                    Arrival
+                    To
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.hasDeparted)
@@ -46,6 +46,12 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    Routes Model Issue
+                </td>
+                <td>
+                    Routes
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.hasDeparted)
