--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
     <header class="masthead">
         <div class="container-fluid">
             <div class="card m-md-5 background-card">
-                <div class="card-body">
+                <div class="card-body overflow-auto">
                     @RenderSection("imageContent", required: false)
                 </div>
             </div>
