--- a/Visual Studio Project/LonghornAirlines/Views/Account/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Account/Index.cshtml
@@ -2,31 +2,33 @@
 @{
     ViewBag.Title = "Change Password";
 }
+@section imageContent
+{
+    <h2>@ViewBag.Title.</h2>
 
-<h2>@ViewBag.Title.</h2>
+    <div>
+        <h4>Change your account settings</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>User Name:</dt>
+            <dd>@Model.UserName</dd>
 
-<div>
-    <h4>Change your account settings</h4>
+            <dt>Email:</dt>
+            <dd>@Model.Email</dd>
+
+            <dt>Password:</dt>
+            <dd>
+                [
+                @if (Model.HasPassword)
+                {
+                    @Html.ActionLink("Change your password", "ChangePassword")
+                }
+                ]
+
+            </dd>
+        </dl>
+
+
+    </div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>User Name:</dt>
-        <dd>@Model.UserName</dd>
-
-        <dt>Email:</dt>
-        <dd>@Model.Email</dd>
-
-        <dt>Password:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
-            {
-                @Html.ActionLink("Change your password", "ChangePassword")
-            }
-            ]
-        
-        </dd>
-    </dl>
-
-   
-</div>
-<hr />
+}
