Update to include First Class Price

--- a/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Search/FlightResults.cshtml
@@ -57,7 +57,7 @@
                     @item.FlightInfo.BaseFare
                 </td>
                 <td>
-                    
+                    @item.FlightInfo.FirstClassFare
                 </td>
                 <td>
                     @item.FlightInfo.FlightTime
