--- a/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/FlightInfos/Edit.cshtml
@@ -6,7 +6,10 @@
 
 <h1>Edit</h1>
 
-<h4>FlightInfo</h4>
+<h4>
+    Flight Number @Html.DisplayFor(model => model.FlightInfoID)<br />
+    From: @Html.DisplayFor(model => model.Route.CityFrom.CityName) (@Html.DisplayFor(model => model.Route.CityFrom.CityCode))  To: @Html.DisplayFor(model => model.Route.CityTo.CityName) (@Html.DisplayFor(model => model.Route.CityTo.CityCode))
+</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
