--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -55,11 +55,11 @@
                             <div class="col-3"></div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input asp-for="isRoundTrip" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="false">
+                                    <input asp-for="isRoundTrip" class="form-check-input" type="radio" value="false">
                                     <label class="form-check-label" for="inlineRadio1">Single Trip</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input asp-for="isRoundTrip" class="form-check-input" type="radio" checked name="inlineRadioOptions" id="inlineRadio2" value="true">
+                                    <input asp-for="isRoundTrip" class="form-check-input" type="radio" checked value="true">
                                     <label class="form-check-label" for="inlineRadio2">Round Trip</label>
                                 </div>
                             </div>
